[GUI] Fix scrollbar on main window

--- a/owmods_gui/frontend/src/styles/style.scss
+++ b/owmods_gui/frontend/src/styles/style.scss
@@ -17,7 +17,7 @@ summary::-webkit-details-marker {
 
 .container {
     width: 100vw;
-    height: 100vh;
+    height: 95vh;
     overflow: hidden;
     display: flex;
     flex-direction: column;
